             (print (aref possiblybigthings i) stream)))))
  should truncate the logical block only at 50 lines, instead of 
  often truncating it at 8 lines.
* :SB-CONSTRAIN-FLOAT-TYPE, :SB-PROPAGATE-FLOAT-TYPE, and
  :SB-PROPAGATE-FUN-TYPE are no longer considered to be optional
  features. Instead, the code that they used to control is always
  built into the system.
?? Old operator names in the style DEF-FOO are now deprecated in favor
  of new corresponding names DEFINE-FOO, for consistency with the
  naming convention used in the ANSI standard). This mostly affects
  internal symbols, but a few external symbols like
  SB-ALIEN:DEF-ALIEN-FUNCTION are also affected.
* minor incompatible change: DEFINE-ALIEN-FUNCTION (also known by 
  the old deprecated name DEF-ALIEN-FUNCTION) now does DECLAIM FTYPE
  for the defined function, since declaiming return types involving
  aliens is (1) annoyingly messy to do by hand and (2) vital 
  to efficient compilation of code which calls such functions (and
  since people writing calls-to-C code aren't likely to be bothered
  by implicit assumptions of static typing).
* The interpreter, EVAL, has been rewritten. Now it calls the
  native compiler for the difficult cases, where it used to call
  the old specialized IR1 interpreter code. 
* The doc/cmucl/ directory, containing old CMU CL documentation,
  is no longer part of the base system. SourceForge has shut down
  its anonymous FTP service, and with it my original plan for
  distributing them separately. For now, if you need them you can
  download an old sbcl source release and get them from there.
?? The compiler, especially the IR1 phase of the compiler, has been
  tweaked somewhat to support the new implementation of DEFUN and
  of the static linking hack used for cold init. In particular,
  the property of "is externally visible" is now orthogonal to
  the property of "is optimized/specialized for being called