@@ -226,6 +226,7 @@
               "IR2-COMPONENT-CONSTANTS" "IR2-CONVERT"
               "IR2-ENVIRONMENT-NUMBER-STACK-P"
 	      "KNOWN-CALL-LOCAL" "KNOWN-RETURN"
+	      "LAMBDA-INDEPENDENT-OF-LEXENV-P"
 	      "LAMBDA-WITH-LEXENV" "LOCATION=" "LTN-ANNOTATE"
               "MAKE-ALIAS-TN" "MAKE-CATCH-BLOCK"
               "MAKE-CLOSURE" "MAKE-CONSTANT-TN" "MAKE-FIXNUM"
