@@ -21,10 +21,11 @@
 	     (:constructor internal-make-lexenv
 			   (functions variables blocks tags type-restrictions
 				      lambda cleanup policy options)))
-  ;; Alist (NAME . WHAT), where WHAT is either a Functional (a local function),
-  ;; a DEFINED-FUNCTION, representing an INLINE/NOTINLINE declaration, or
-  ;; a list (MACRO . <function>) (a local macro, with the specifier
-  ;; expander.) Note that NAME may be a (SETF <name>) function.
+  ;; an alist of (NAME . WHAT), where WHAT is either a FUNCTIONAL (a
+  ;; local function), a DEFINED-FUNCTION, representing an
+  ;; INLINE/NOTINLINE declaration, or a list (MACRO . <function>) (a
+  ;; local macro, with the specifier expander). Note that NAME may be
+  ;; a (SETF <name>) list, not necessarily a single symbol.
   (functions nil :type list)
   ;; an alist translating variable names to LEAF structures. A special
   ;; binding is indicated by a :SPECIAL GLOBAL-VAR leaf. Each special
@@ -45,7 +46,7 @@
   ;; "pervasive" type declarations. When THING is a leaf, this is for
   ;; type declarations that pertain to the type in a syntactic extent
   ;; which does not correspond to a binding of the affected name. When
-  ;; Thing is a continuation, this is used to track the innermost THE
+  ;; THING is a continuation, this is used to track the innermost THE
   ;; type declaration.
   (type-restrictions nil :type list)
   ;; the lexically enclosing lambda, if any
@@ -54,9 +55,6 @@
   ;; to get CLAMBDA defined in time for the cross-compiler.
   (lambda nil) 
   ;; the lexically enclosing cleanup, or NIL if none enclosing within Lambda
-  ;;
-  ;; FIXME: This should be :TYPE (OR CLEANUP NULL), but it was too hard
-  ;; to get CLEANUP defined in time for the cross-compiler.
   (cleanup nil)
   ;; the current OPTIMIZE policy
   (policy *policy* :type policy)
@@ -70,3 +68,22 @@
   (etypecase x
     (null (make-null-lexenv))
     (lexenv x)))
+
+;;; Is it safe to just grab the lambda expression LAMBDA in isolation,
+;;; ignoring the LEXENV?
+;;;
+;;; Note: The corresponding CMU CL code did something hairier so that
+;;; it could save inline definitions of DEFUNs in nontrivial lexical
+;;; environments. If it's ever important to try to do that, take a
+;;; look at the old CMU CL #'INLINE-SYNTACTIC-CLOSURE.
+(defun lambda-independent-of-lexenv-p (lambda lexenv)
+  (declare (type list lambda) (type lexenv lexenv))
+  (aver (eql (first lambda) 'lambda)) ; basic sanity check
+  ;; This is a trivial implementation that just makes sure that LEXENV
+  ;; doesn't have anything interesting in it. A more sophisticated
+  ;; implementation could skip things in LEXENV which aren't captured
+  ;; by LAMBDA, but this implementation doesn't try.
+  (and (null (lexenv-blocks lexenv))
+       (null (lexenv-tags lexenv))
+       (null (lexenv-variables lexenv))
+       (null (lexenv-functions lexenv))))
